docs: sync all documentation to reflect Phases 0-10 complete
Updates README.md, docs/index.html, docs/architecture.md, docs/roadmap.md,
and CLAUDE.md to accurately reflect what has been built through Phase 10.
Marks Phases 0-10 complete in roadmap and index.html; adds multi-provider LLM
abstraction, actual proxy filter chain, agent inventory with Micrometer metrics,
pgvector cosine similarity details, SpEL sandbox approach, and -parameters
compiler flag requirement. Phase 11 set as active next milestone.